tests/context_clause_mismatch_bad.stderr
tests/context_clause_mismatch_bad.sl:14:16: error: SL1004: unexpected token
